# beets-kergoth

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.rst  pyproject.toml  tox.ini
beetsplug/: abcalc.py  advisory.py  alias.py  alternativesplaylist.py  convertsingletons.py  crossquery.py  defaultformats.py  existingqueries.py  genres.py  hasart.py  hookscripts.py  importinspect.py  inconsistentalbumtracks.py  inlinehook.py  last_import.py  mocked_candidate.py  modifyonimport.py  modifytmpl.py  musicsource.py  nowrite.py  open.py  pathfield.py  picard.py  queryalbum.py  reimportskipfields.py  replace_format.py  replaceformat.py  replacefunc.py  saved_formats.py  savedformats.py  savedqueries.py  splalternatives.py  spotifyexplicit.py  tablelist.py  zeroalbum.py
docs/: alias.rst  conf.py  genres.rst  importinspect.rst  index.rst  modifyonimport.rst  replaceformat.rst  savedformats.rst  savedqueries.rst  tablelist.rst
tests/: test_advisory.t  test_alias.t  test_crossquery.t  test_import_inspect.t  test_importinspect.t  test_inconsistentalbumtracks.t  test_last_import.t  test_lastimport.t  test_modifyonimport.t  test_modifytmpl.t  test_musicsource.t  test_nowrite.t  test_picard.t  test_queryalbum.t  test_reimportskipfields.t  test_replace_format.t  test_replaceformat.t  test_saved_formats.t  test_saved_queries.t  test_savedformats.t  test_savedqueries.t  test_zeroalbum.t
tests/beetsplug/: mockedcandidate.py
tests/scripts/: get-itunesadvisory  set-itunesadvisory
