[tool.poetry]
name = "beets-kergoth"
version = "0.2.0"
description = "Various personal beets plugins that don't yet have a home elsewhere."
license = "Blue Oak Model License 1.0.0"
readme = "README.rst"
homepage = "https://github.com/kergoth/beets-kergoth"
repository = "https://github.com/kergoth/beets-kergoth"
authors = ["Christopher Larson <kergoth@gmail.com>"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Plugins',
    'Topic :: Multimedia :: Sound/Audio',
]
packages = [
    { include = "beetsplug" },
]

[tool.poetry.dependencies]
python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, <3.8"
beets = "^1.4"
confuse = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
cram = "^0.7.0"
pytest-cram = "^0.2.0"
flake8 = "^3.7.8"
mypy = "^0.720"
pytest-cov = "^2.7.1"

[build-system]
requires = ["poetry>=1.0.0b"]
build-backend = "poetry.masonry.api"
