[tool.poetry]
name = "beets-kergoth"
version = "0.4.0"
description = "Various personal beets plugins that don't yet have a home elsewhere."
license = "Blue Oak Model License 1.0.0"
readme = "README.rst"
homepage = "https://github.com/kergoth/beets-kergoth"
repository = "https://github.com/kergoth/beets-kergoth"
authors = ["Christopher Larson <kergoth@gmail.com>"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Plugins',
    'Topic :: Multimedia :: Sound/Audio',
]
packages = [
    { include = "beetsplug" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
beets = "^2.0.0"
confuse = "^2.0.1"
mediafile = ">=0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cram = "^0.2.2"
flake8 = "^7.1.1"
pytest-cov = "^5.0.0"
cram = "^0.7"

[build-system]
requires = ["poetry>=1.0.0b"]
build-backend = "poetry.masonry.api"
